# survey_eval

./: .gitignore  BATCH_EVAL_PLAN.md
base-survey/: README.md  pyproject.toml
base-survey/base_survey/: __init__.py  __main__.py
base-survey/base_survey/acp/: __init__.py  protocol.py  server.py
base-survey/base_survey/agents/: __init__.py  base.py  survey.py
base-survey/base_survey/core/: __init__.py  config.py
base-survey/base_survey/memory/: __init__.py  compressed_memory.py
base-survey/base_survey/prompts/: __init__.py  survey.py
base-survey/base_survey/tools/: __init__.py  file_tools.py  literature_tools.py
base-survey/base_survey/utils/: logger.py
base-survey/etc/: config.yaml
base-survey/scripts/: start_acp.sh
batch_run/: config.yaml  (+11 more)
eval_survey_new/eval/: pyproject.toml  requirements.txt
eval_survey_new/eval/metrics/: __init__.py  citation_relevance.py  content_accuracy.py  writing_quality.py
eval_survey_new/eval/results/: eval_report_sfedavg_dpsk_20260327_131631.md  eval_report_sfedavg_gpt51_20260327_125925.md  eval_report_sfedavg_sonnet4.6_20260327_131854.md  eval_report_subspacescaffold_dpsk_20260327_131719.md  eval_report_subspacescaffold_gpt51_20260327_125848.md  eval_report_subspacescaffold_sonnet4.6_20260327_131822.md  eval_report_sudamuon_dpsk_20260327_131438.md  eval_report_sudamuon_gpt51_20260327_124336.md  eval_report_sudamuon_sonnet4.6_20260327_131444.md  eval_result_sfedavg_dpsk_20260327_131631.json  eval_result_sfedavg_gpt51_20260327_125925.json  eval_result_sfedavg_sonnet4.6_20260327_131854.json  eval_result_subspacescaffold_dpsk_20260327_131719.json  eval_result_subspacescaffold_gpt51_20260327_125848.json  eval_result_subspacescaffold_sonnet4.6_20260327_131822.json  eval_result_sudamuon_dpsk_20260327_131438.json  (+4 more)
(+122 files in other folders)
