[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base-survey"
version = "1.0.0"
description = "基础调研 Agent - 仅文献搜索(Semantic Scholar)与文件系统工具，无角色指定"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["agentscope", "survey", "literature", "semantic-scholar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "agentscope>=1.0.10",
    "openai>=1.111.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
base-survey = "base_survey.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["base_survey*"]
exclude = ["tests*", "workspace*", "logs*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
