[project]
name = "related-works-eval"
version = "0.1.0"
description = "Related Works 评测系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "scholarly>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
eval-related-works = "evaluator:main"
